listings/ch10-generic-types-traits-and-lifetimes/listing-10-23/output.txt
$ cargo run
   Compiling capitolo10 v0.1.0 (file:///projects/capitolo10)
error[E0597]: `stringa2` does not live long enough
 --> src/main.rs:6:50
  |
5 |         let stringa2 = String::from("xyz");
  |             -------- binding `stringa2` declared here
6 |         risultato = più_lunga(stringa1.as_str(), stringa2.as_str());
  |                                                  ^^^^^^^^ borrowed value does not live long enough
7 |     }
  |     - `stringa2` dropped here while still borrowed
8 |     println!("La stringa più lunga è {risultato}");
  |                                       --------- borrow later used here

For more information about this error, try `rustc --explain E0597`.
error: could not compile `capitolo10` (bin "capitolo10") due to 1 previous error
